[gd_scene load_steps=3 format=3 uid="uid://be2m3x33rvmha"]

[ext_resource type="Theme" uid="uid://cp1t7xqq6k8jr" path="res://scenes/程菜单.tres" id="1_n7ltr"]
[ext_resource type="Script" uid="uid://ir6tghotjqsq" path="res://scripts/bank_main.gd" id="2_n7ltr"]

[node name="bank_main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n7ltr")
script = ExtResource("2_n7ltr")

[node name="bg" type="Panel" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 930.0
offset_bottom = 450.0

[node name="ColorRect" type="ColorRect" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.103744, 0.103744, 0.103744, 0.666667)

[node name="按钮组" type="Panel" parent="bg"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 120.0
grow_vertical = 2

[node name="vb" type="VBoxContainer" parent="bg/按钮组"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mc1" type="MarginContainer" parent="bg/按钮组/vb"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b1" type="Button" parent="bg/按钮组/vb/mc1"]
layout_mode = 2
toggle_mode = true
text = "银行"

[node name="mc2" type="MarginContainer" parent="bg/按钮组/vb"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b2" type="Button" parent="bg/按钮组/vb/mc2"]
layout_mode = 2
toggle_mode = true
text = "彩票"

[node name="mc3" type="MarginContainer" parent="bg/按钮组/vb"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b3" type="Button" parent="bg/按钮组/vb/mc3"]
layout_mode = 2
toggle_mode = true
text = "股票交易"

[node name="mc4" type="MarginContainer" parent="bg/按钮组/vb"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b4" type="Button" parent="bg/按钮组/vb/mc4"]
layout_mode = 2
toggle_mode = true
text = "捐赠记录"

[node name="mc5" type="MarginContainer" parent="bg/按钮组/vb"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b5" type="Button" parent="bg/按钮组/vb/mc5"]
layout_mode = 2
toggle_mode = true
text = "关于联盟"

[node name="mc6" type="MarginContainer" parent="bg/按钮组/vb"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b6" type="Button" parent="bg/按钮组/vb/mc6"]
layout_mode = 2
toggle_mode = true
text = "周六"

[node name="mc7" type="MarginContainer" parent="bg/按钮组/vb"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="b7" type="Button" parent="bg/按钮组/vb/mc7"]
layout_mode = 2
toggle_mode = true
text = "周日"

[node name="选项组" type="Panel" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 142.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="sc1" type="PanelContainer" parent="bg/选项组"]
layout_mode = 2
offset_top = 10.0
offset_right = 760.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="bg/选项组/sc1"]
layout_mode = 2

[node name="Label" type="Label" parent="bg/选项组/sc1/VBoxContainer"]
layout_mode = 2
text = "总资产："

[node name="HBoxContainer" type="HBoxContainer" parent="bg/选项组/sc1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "活期"

[node name="LineEdit" type="LineEdit" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "0"

[node name="b1" type="Button" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "存入"

[node name="b2" type="Button" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "取出"

[node name="Label2" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "        "

[node name="Label3" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "        "

[node name="Label4" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="bg/选项组/sc1/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "定期"

[node name="LineEdit" type="LineEdit" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
placeholder_text = "0"
virtual_keyboard_type = 2

[node name="OptionButton" type="OptionButton" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "半年"
popup/item_0/id = 0
popup/item_1/text = "一年"
popup/item_1/id = 1
popup/item_2/text = "三年"
popup/item_2/id = 2

[node name="b3" type="Button" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "存入"

[node name="b4" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "        "

[node name="b5" type="Button" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "取出"

[node name="LineEdit2" type="LineEdit" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
placeholder_text = "0"
virtual_keyboard_type = 2

[node name="b6" type="Label" parent="bg/选项组/sc1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "定期编号的存款"

[node name="Label2" type="Label" parent="bg/选项组/sc1/VBoxContainer"]
layout_mode = 2
text = "定期存款列表："

[node name="ScrollContainer" type="ScrollContainer" parent="bg/选项组/sc1/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="dqck" type="VBoxContainer" parent="bg/选项组/sc1/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sc2" type="PanelContainer" parent="bg/选项组"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="bg/选项组/sc2"]
layout_mode = 2

[node name="sc3" type="ScrollContainer" parent="bg/选项组"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="bg/选项组/sc3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sc4" type="ScrollContainer" parent="bg/选项组"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="bg/选项组/sc4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sc5" type="ScrollContainer" parent="bg/选项组"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="d5" type="VBoxContainer" parent="bg/选项组/sc5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="sc6" type="ScrollContainer" parent="bg/选项组"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="d6" type="VBoxContainer" parent="bg/选项组/sc6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="sc7" type="ScrollContainer" parent="bg/选项组"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="d7" type="VBoxContainer" parent="bg/选项组/sc7"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="bg"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_bottom = 31.0
grow_horizontal = 0
text = "关闭窗口"

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer/b1" to="." method="_on_b_1_pressed"]
[connection signal="pressed" from="bg/选项组/sc1/VBoxContainer/HBoxContainer/HBoxContainer/b2" to="." method="_on_b_2_pressed"]
[connection signal="pressed" from="bg/选项组/sc1/VBoxContainer/HBoxContainer2/b3" to="." method="_on_b_3_pressed"]
[connection signal="pressed" from="bg/选项组/sc1/VBoxContainer/HBoxContainer2/b5" to="." method="_on_b_5_pressed"]
[connection signal="pressed" from="bg/Button" to="." method="_on_button_pressed"]
